<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    app:cardElevation="12dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="16dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="70"
            android:layout_width="0dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/ivContactImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/contact_photo_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_svg" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp">
                <TextView
                    android:id="@+id/tvContactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingVertical="8dp"/>

                <TextView
                    android:id="@+id/tvContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_number"
                    android:textSize="14sp"
                    android:paddingVertical="2dp"/>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            android:elevation="0dp"
            app:elevation="0dp"
            android:clickable="true"
            android:contentDescription="@string/sex_by_born"
            app:srcCompat="@android:drawable/stat_sys_phone_call"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>